# knowledge-dashboard

./: .gitignore  CLAUDE.md  PROJECT_BRIEF.md  eslint.config.js  index.html  kd-features.mjs  kd-test.mjs  main.py  package-lock.json  package.json  requirements.txt  robots.txt  schema.sql  screenshot-test.mjs  search_engine.py  settings-after-gradient.txt  sw.js  test-auth.mjs  test-click-saved.mjs  test-debug-saved.mjs  test-debug-tabs.mjs  test-downloads.mjs  test-full.mjs  test-pdf-notesheet.mjs  test-saved-notesheets.mjs  test-vercel-pdf.mjs  vercel.json  vscode-extensions.txt
.cursor/: settings.json
docs/architecture/decisions/: 0001-port-migration-and-uv.md
fastapi-app/: CLAUDE.md  CLOUDFLARE_SETUP.md  dashboard.db  dashboard.db-shm  dashboard.db-wal  main.py  pyproject.toml  requirements.txt  search_engine.py  start.sh
fastapi-app/templates/: index.html
next-app/: CLAUDE.md  package-lock.json  package.json
next-app/src/app/: globals.css  layout.tsx  page.tsx
next-app/src/components/: BookmarkBar.tsx  BookmarksList.tsx  EmailScanner.tsx  Header.tsx  MaterialUpload.tsx  NewBookmark.tsx  NewNote.tsx  NewTodo.tsx  NotesList.tsx  NotesTab.tsx  NotesheetDisplay.tsx  QuizSection.tsx  SearchBar.tsx  Sidebar.tsx  StudyPanel.tsx  TasksTab.tsx  Toast.tsx  TodosList.tsx
next-app/src/lib/: auth.ts  embedding.ts  (+4 more)
spain-czechrepublic-2016.com/: index.html
src/: App.jsx
src/components/: ModuleCard.jsx  Sidebar.jsx  StatCard.jsx
src/pages/: Account.jsx  Analytics.jsx  Calculator.jsx  Dashboard.jsx  Notes.jsx  Settings.jsx  Tools.jsx
templates/: index.html
(+26 files in other folders)
