[project]
name = "skillstack-api"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "chromadb>=0.6.3",
    "sentence-transformers>=3.4.1",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = []
